# semanticscholar

./: .gitignore  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py
semanticscholar/: ApiRequester.py  AsyncSemanticScholar.py  SemanticScholar.py
